@@ -25,7 +25,7 @@
     </vendor>
 
     <!-- Requires IDEA 10.0 or later -->
-    <idea-version since-build="103.72" until-build="107.999"/>
+    <idea-version since-build="107.105" until-build="109.999"/>
 
     <!-- Mark the plugin as compatible with RubyMine and other products based on the IntelliJ platform -->
     <depends>com.intellij.modules.lang</depends>
@@ -41,7 +41,7 @@
     <html>
        <b>Changes in version 1.0:</b>
        <ul>
-        <li></li>
+        <li>Compatible with IntelliJ 10.5 or later</li>
        </ul>
 
        <b>Changes in version 0.9.23:</b>
